laatste opmaak fixes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="icon" type="image/jpg" href="pxl.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,7 +12,7 @@
         <div class="about-section">
             <div class="profile-container">
                 <div class="profile-image">
-                    <img src="https://scontent.fbru5-1.fna.fbcdn.net/v/t39.30808-6/462205272_8454141328011769_9152473749518417068_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=3-9bJUBh8yQQ7kNvwFLglCZ&_nc_oc=AdkeiDHrfnq_UEIVS3Y0z51DGCTenIYqSDV9ZTKwxNMvV1c6Cu3mVo4pflw3lhdd7I-xaGcrraUvjUSx7PBbzYNU&_nc_zt=23&_nc_ht=scontent.fbru5-1.fna&_nc_gid=gCWCOQK34HsP5h4rZIwXSA&oh=00_AfGtMeWZfigJnU9nStttZ-YCesLfp9sQw5gzEJJgZr42Gg&oe=6801CD1D" alt="Profile Picture">
+                    <img src="italent.jpg" alt="Profile Picture">
                 </div>
                 <div class="profile-info">
                     <h1>Xander Schaeken</h1>
@@ -30,7 +31,7 @@
                 <div class="about-section">
                     <h3>Mijn Werkwijze</h3>
                     <ul class="about-list">
-                        <li>Ik ben iemand die zijn taak binnen een groep kan uitwerken en alles op tijd begint</li>
+                        <li>Ik ben iemand die zijn taak binnen een groep kan uitwerken en aan alles op tijd begint</li>
                         <li>Ik werk gestructureerd en neem verantwoordelijkheid voor mijn deel</li>
                         <li>Ik help graag met het behalen van de klant zijn eisen</li>
                     </ul>
@@ -39,10 +40,11 @@
                 <div class="about-section">
                     <h3>Mijn Doelen</h3>
                     <ul class="about-list">
-                        <li>Later goed kunnen leven zonder zorgen over geld</li>
+                        <li>Later goed kunnen leven</li>
                         <li>Werken in een stabiel bedrijf</li>
                         <li>Een balans vinden tussen werk en privéleven</li>
                         <li>Mijn soft skills verbeteren</li>
+                        <li>Verdiepen in automatisering</li>
                     </ul>
                 </div>
 
@@ -52,8 +54,7 @@
                         <li>Samenwerken en zelfstandig werken</li>
                         <li>Problemen analyseren en oplossen</li>
                         <li>Technische basisvaardigheden</li>
-                        <li>Wil me nog meer verdiepen in automatisering</li>
-                        <li>Certificaten halen</li>
+                        <li>Certificaten behalen</li>
                     </ul>
                 </div>
             </div>
