--- a/innovatie.html
+++ b/innovatie.html
@@ -18,8 +18,8 @@
             </div>
             <div class="event-content">
                 <p class="event-description">
-                    Een sessie over het ontleden van cyberaanvallen met focus op APT, ransomware, crisisbeheer en incident response. 
-                    Een workshop rond threat hunting en response binnen AWS-omgevingen. 
+                    Een sessie over het ontleden van cyberaanvallen met focus op APT, ransomware, crisisbeheer en incident response.<br>
+                    Een workshop rond threat hunting en response binnen AWS-omgevingen.<br>
                     Een hands-on workshop over Secure SD-WANs met topics zoals SDN, traffic shaping, FortiManager, SD-WAN templates en FortiGate-configuratie.
                 </p>
                 <div class="event-details">
@@ -50,9 +50,7 @@
             </div>
             <div class="event-content">
                 <p class="event-description">
-                    Tijdens de hackathon waren we in teams verdeelt voor aan IT-challenges te werken. 
-                    Het was een dag vol coderen, creatief nadenken. Op het einden moesten we dan onze challenges 
-                    die we gedaan/geprobeerd hadden presenteren aan de mentoren en de andere groepen.
+                    Tijdens de hackathon werden we in teams verdeeld voor aan IT-challenges te werken. Het was een dag vol coderen en creatief nadenken. Op het einde moesten we de challenges die we hadden opgelost of geprobeerd te voltooien, presenteren aan de bedrijfsexperts en de andere groepen.
                 </p>
                 <div class="event-details">
                     <div class="detail-group">
