--- a/internationalisering.html
+++ b/internationalisering.html
@@ -19,7 +19,7 @@
             
             <div class="trip-content">
                 <div class="trip-description">
-                    <p>Een studiereis naar Oostenrijk met een mix van cultuur en technologie. We verkenden Linz, Salzburg en Hagenburg, bezochten het Ars Electronica Center, volgden workshops in Hagenberg en leerden alles over studeren in het buitenland.</p>
+                    <p>We namen deel aan een studiereis naar Oostenrijk, waar cultuur en technologie centraal stonden. We bezochten steden zoals Linz, Salzburg en Hagenberg, volgden workshops aan de FH OÖ, ontdekten het Ars Electronica Center en kregen inzicht in de mogelijkheden om in het buitenland te studeren.</p>
                 </div>
 
                 <div class="locations-section">
