--- a/persoonlijke-ontwikkeling.html
+++ b/persoonlijke-ontwikkeling.html
@@ -17,9 +17,7 @@
             </div>
             <div class="event-content">
                 <div class="event-description">
-                    De projectweek bestond uit diverse workshops, lezingen en groepsopdrachten gericht op zowel persoonlijke als professionele ontwikkeling. 
-                    Er werd aandacht besteed aan thema's zoals samenwerking, communicatie, academisch schrijven en internationalisering. 
-                    De week bood deelnemers de kans om inzicht te krijgen in het belang van soft skills, netwerken en een goede voorbereiding op toekomstige projecten of stages.
+                    De projectweek bestond uit diverse workshops, lezingen en groepsopdrachten gericht op zowel persoonlijke als professionele ontwikkeling. Er werd aandacht besteed aan thema’s zoals samenwerking, communicatie, academisch schrijven en internationalisering. De week bood deelnemers de kans om inzicht te krijgen in het belang van soft skills, netwerken en een goede voorbereiding op toekomstige projecten of stages.
                 </div>
                 <div class="event-details info-row">
                     <div class="detail-group">
@@ -58,7 +56,7 @@
             </div>
             <div class="event-content">
                 <div class="event-description">
-                    Deze sessie toont hoe digitale afleiding, zoals smartphones en multitasken, onze focus en breinrust verstoren. Ze geeft tips om bewuster om te gaan met technologie, zoals notificaties uitschakelen, monotasken en regelmatig offline gaan.
+                    Deze sessie toonde hoe digitale afleidingen, zoals smartphones en multitasken, onze focus en mentale rust verstoren. Het bood tips aan om bewuster met technologie om te gaan, zoals het uitschakelen van notificaties, monotasken en regelmatig offline gaan.
                 </div>
                 <div class="event-details info-row">
                     <div class="detail-group">
@@ -127,7 +125,7 @@
             </div>
             <div class="event-content">
                 <div class="event-description">
-                    In deze sessie ontdekten we wat een team sterk maakt en hoe je beter samenwerkt door open communicatie, vertrouwen, duidelijke afspraken, conflicten niet te vermijden en gezamenlijke doelen na te streven volgens het model van Lencioni.
+                    In deze sessie ontdekten we wat een team sterk maakt en hoe je beter samenwerkt door open communicatie, vertrouwen, duidelijke afspraken, het niet vermijden van conflicten en het nastreven van gezamenlijke doelen volgens het model van Lencioni.
                 </div>
                 <div class="event-details info-row">
                     <div class="detail-group">
