--- a/seminarie.html
+++ b/seminarie.html
@@ -39,7 +39,7 @@
                                 Hasselt, 3500<br>
                                 België</div>
                         </td>
-                        <td>een introductie gekregen over de mogelijkheden van Microsoft Cloud: Azure & Intune</td>
+                        <td>We hebben een introductie gekregen over de mogelijkheden van Microsoft Cloud: Azure & Intune.</td>
                     </tr>
                     <tr>
                         <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQpYNSHHdCildJ_22RjlysZocheL1BuuR0cA&s" alt="Toreon Seminar"></td>
@@ -53,7 +53,7 @@
                                 Hasselt, 3500<br>
                                 België</div>
                         </td>
-                        <td>In deze workshop hebben we de rol gekregen van een penetration tester. We kregen enekele challenges om optelossen om daarna in de code te gaan kijken naar waar de fout zit.</td>
+                        <td>In deze workshop kregen we de rol van penetration tester. We moesten enkele challenges oplossen en vervolgens in de code zoeken waar de kwetsbaarheid zat.</td>
                     </tr>
                     <tr>
                         <td><img src="https://media.licdn.com/dms/image/v2/C4E0BAQEdgiTJWjD9dA/company-logo_200_200/company-logo_200_200/0/1653387335116/gluobe_logo?e=2147483647&v=beta&t=nPTsDeeecv5Su9R3BuClQNLjUoOdZjANY50nu6enmYM" alt="Gluo Seminar"></td>
@@ -67,7 +67,7 @@
                                 Hasselt, 3500<br>
                                 België</div>
                         </td>
-                        <td>Opzetten van een containerized applicatie en het stapsgewijs automatiseren van de infrastructuurdeployment via verschillende cloudproviders en tools, eindigend in een volledig geautomatiseerde multi-cloud pipeline.</td>
+                        <td>Tijdens dit seminarie hebben we een containerized applicatie opgezet en hebben stapsgewijs de infrastructuurdeployment via verschillende cloudproviders en tools geautomatiseerd, eindigend in een volledig geautomatiseerde multi-cloud pipeline.</td>
                     </tr>
                     <tr>
                         <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4_eKulcPmenP_Fgo-16AEockJlRoczPQEcg&s" alt="Politie Seminar"></td>
@@ -81,7 +81,7 @@
                                 Hasselt, 3500<br>
                                 België</div>
                         </td>
-                        <td>Presentatie over de taakinhoud van de RCCU binnen de federale politie en de technologische, juridische en operationele uitdagingen bij de bestrijding van cybercriminaliteit en het veiligstellen van digitaal bewijs.</td>
+                        <td>We kregen een presentatie over de taakinhoud van de RCCU binnen de federale politie en de technologische, juridische en operationele uitdagingen bij de bestrijding van cybercriminaliteit en het veiligstellen van digitaal bewijs.</td>
                     </tr>
                     <tr>
                         <td><img src="https://www.bloovi.be/frontend/files/profiles/avatars/source/4795_ibm-belgium.png" alt="IBM Seminar"></td>
@@ -95,7 +95,7 @@
                                 Hasselt, 3500<br>
                                 België</div>
                         </td>
-                        <td>Tijdens deze seminarie hebben we ontdekt wat de boeiende synergie tussen Generatieve AI en Quantum Computing, met toepassingen zoals slimme prompt engineering, AI-ondersteunde transpilers, codegeneratie via Qiskit Assistant en Quantum Machine Learning voor LLM's.</td>
+                        <td>Tijdens dit seminarie ontdekten we de boeiende synergie tussen Generatieve AI en Quantum Computing, met toepassingen zoals slimme prompt engineering, AI-ondersteunde transpilers, codegeneratie via Qiskit Assistant en Quantum Machine Learning voor LLM’s.</td>
                     </tr>
                     <tr>
                         <td><img src="https://media.licdn.com/dms/image/v2/C4E0BAQEdgiTJWjD9dA/company-logo_200_200/company-logo_200_200/0/1653387335116/gluobe_logo?e=2147483647&v=beta&t=nPTsDeeecv5Su9R3BuClQNLjUoOdZjANY50nu6enmYM" alt="Gluo Seminar"></td>
@@ -121,7 +121,7 @@
                                 Hasselt, 3500<br>
                                 België</div>
                         </td>
-                        <td>De rondleiding is begonnen met het verhaal van Cegeka daarna presentatie gehad van het datacenter en tenslotte hebben we het datacenter mogen bezoeken.</td>
+                        <td>De rondleiding is begonnen met een uitleg over Cegeka. Daarna hebben we een presentatie gehad over het datacenter. Tenslotte hebben we het dit ook mogen bezoeken.</td>
                     </tr>
                     <tr>
                         <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4_eKulcPmenP_Fgo-16AEockJlRoczPQEcg&s" alt="Politie Seminar"></td>
