--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="about-content">
                 <div class="about-section">
                     <h3>Over Mij</h3>
-                    <p>Ik ben Xander Schaeken, 21 jaar en Systeem- en netwerkbeheer student aan de Hogeschool PXL. Mijn interesses liggen bij Automatisering en Monitoring.</p>
+                    <p>Ik ben Xander Schaeken, 21 jaar en Systeem- en netwerkbeheer student aan de Hogeschool PXL. Mijn interesses liggen bij automatisering en security.</p>
                 </div>
 
                 <div class="about-section">
